@@ -1,9 +1,10 @@
 language: perl
 perl:
+   - '5.10'
    - '5.14'
-   - '5.16'
    - '5.18'
    - '5.20'
+   - '5.22'
 matrix:
    fast_finish: true
 before_install:
@@ -19,4 +20,4 @@ install:
    - "dzil authordeps          --missing | grep -vP '[^\\w:]' | xargs -n 5 -P 10 cpanm --quiet --notest"
    - "dzil listdeps   --author --missing | grep -vP '[^\\w:]' | cpanm --verbose"
 script:
-   - dzil smoke --release --author -v
+   - dzil smoke --release --author
