@@ -1,21 +1,23 @@
-; This file was auto-generated from iller.yaml on 2015-03-23 16:38:39 UTC.
+; This file was auto-generated from iller.yaml on 2016-01-26 18:14:00 UTC.
+; Used configs:
+; * Dist::Iller::Config::Author::CSSON: 0.0107
 
 name = Pod-Weaver-Section-Badges
 author = Erik Carlsson <info@code301.com>
 license = Perl_5
-copyright_holder = Erik Carlsson <info@code301.com>
-copyright_year = 2015
+copyright_holder = Erik Carlsson
+copyright_year = 2016
 
 [Git::GatherDir]
 exclude_filename = META.json
 exclude_filename = LICENSE
 exclude_filename = README.md
-exclude_filename = Build.PL
+exclude_filename = Makefile.PL
 
 [CopyFilesFromBuild]
 copy = META.json
 copy = LICENSE
-copy = Build.PL
+copy = Makefile.PL
 
 [ReversionOnRelease]
 prompt = 1
@@ -34,7 +36,7 @@ format = %d.%02d%02d
 major =
 minor = API Changes, New Features, Enhancements
 numify_version = 0
-revision = Requirements, Testing, Revision, Bug Fixes, Documentation, Meta
+revision = Requirements, Testing, Other Changes, Bug Fixes, Documentation
 
 [PodWeaver]
 
@@ -44,7 +46,7 @@ allow_dirty = Changes
 allow_dirty = META.json
 allow_dirty = README.md
 allow_dirty = README
-allow_dirty = Build.PL
+allow_dirty = Makefile.PL
 
 [GithubMeta]
 homepage = https://metacpan.org/release/Pod-Weaver-Section-Badges
@@ -67,7 +69,7 @@ directory = examples
 
 [Prereqs::Plugins]
 
-[ModuleBuildTiny]
+[MakeMaker]
 
 [MetaJSON]
 
@@ -75,7 +77,11 @@ directory = examples
 
 [MetaProvides::Package]
 
-[ContributorsFromGit]
+[DistIller::MetaGeneratedBy]
+
+[Git::Contributors]
+
+[Test::Compile]
 
 [Test::ReportPrereqs]
 
@@ -84,8 +90,6 @@ directory = examples
 [MetaYAML]
 
 [License]
-
-[CheckExtraTests]
 
 [RunExtraTests]
 
@@ -105,6 +109,9 @@ directory = examples
 
 [UploadToCPAN]
 
+[TravisYML]
+perl_version = 5.10 5.14 5.18 5.20 5.22
+
 [Git::Tag]
 tag_format = %v
 tag_message =
@@ -112,11 +119,13 @@ tag_message =
 [Git::Push]
 remotes_must_exist = 1
 
-[TravisYML]
-perl_version = 5.14 5.16 5.18 5.20
-script = dzil smoke --release --author -v
+[InstallRelease]
+install_command = cpanm .
+
+[Clean]
 
 [Prereqs / DevelopRequires]
+Dist::Iller::Config::Author::CSSON = 0
 Pod::Elemental::Transformer::List = 0
 Pod::Elemental::Transformer::Splint = 0
 Pod::Weaver::Plugin::SingleEncoding = 0
@@ -137,12 +146,13 @@ Test::Warnings = 0
 [Prereqs / RuntimeRequires]
 List::AllUtils = 0
 Module::Pluggable = 4.7
-Moops = 0.034
-Moose = 2.0000
+Moose = 2.1400
 MooseX::AttributeDocumented = 0
 Pod::Weaver::Role::AddTextToSection = 0
 Pod::Weaver::Role::Section = 0
-perl = 5.014000
+Types::Standard = 1.000000
+namespace::autoclean = 0.18
+perl = 5.010001
 
 [Prereqs / TestRequires]
 Badge::Depot = 0
@@ -160,7 +170,8 @@ Test::Differences = 0
 Test::More = 0.96
 
 ; authordep Moose
-; authordep Moops
+; authordep namespace::autoclean
+; authordep Types::Standard
 ; authordep Pod::Weaver::Role::Section
 ; authordep Pod::Weaver::Role::AddTextToSection
 ; authordep MooseX::AttributeDocumented
@@ -178,6 +189,7 @@ Test::More = 0.96
 ; authordep FindBin
 ; authordep File::pushd
 ; authordep Syntax::Feature::Qi
+; authordep Dist::Iller::Config::Author::CSSON
 ; authordep Test::Warnings
 ; authordep Test::More
 ; authordep Pod::Weaver::PluginBundle::CorePrep
