@@ -1,4 +1,6 @@
-; This file was auto-generated from iller.yaml on 2015-03-23 16:38:39 UTC.
+; This file was auto-generated from iller.yaml on 2016-01-26 18:14:00 UTC.
+; Used configs:
+; * Dist::Iller::Config::Author::CSSON: 0.0107
 
 [@CorePrep]
 
